# myAIpath

./: README.md  backend.py  cv_extraction.py  emailagent.py  frontend.py  main.py  pyproject.toml  searchCourses.py
attached_assets/: Pasted-import-cv-extraction-searchCourses-emailagent-from-PyPDF2-import-PdfReader-from-fastapi-import-F-1737747667559.txt
templates/: index.html  result.html
